--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Montserrat', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +12,54 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a{
+  text-decoration: none;
+}
+
+/* ////////////// */
+
+h1 {
+  text-align: center;
+  margin-top: 0;
+}
+
+hr {
+  margin-bottom: 30px;
+  width: 25%;
+  border: 1px solid palevioletred;
+  background-color: palevioletred;
+}
+
+form {
+  margin: 0 28%;
+}
+
+label {
+  width: 80%;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+input {
+  padding-left: 10px;
+  display: block;
+  height: 40px;
+  width: 100%;
+}
+
+button {
+  border: none;
+  background-color: rgba(104, 237, 255, 0.726);
+  border-radius: 5px;
+  padding: 20px 40px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+p {
+  margin-top: 5px;
+  color: red;
 }
