--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 body {
   margin: 0;
@@ -51,6 +52,7 @@ input {
 }
 
 button {
+  margin-top: 15px;
   border: none;
   background-color: rgba(104, 237, 255, 0.726);
   border-radius: 5px;
@@ -62,4 +64,15 @@ button {
 p {
   margin-top: 5px;
   color: red;
+}
+
+.notification{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  height: 40px;
+  margin: 10px 0 0 10px;
+  border-radius: 15px;
+  background-color: rgb(184, 255, 96);
 }
